<resources>
    <string name="app_name">Ski Logger</string>

    <string name="channel_altitude_service">現在高度</string>
    <string name="msg_svc_ongoing">計測中</string>
    <!--<string name="fmt_svc_ongoing">開始 (%s)</string>-->

    <string name="fmt_meter">　%,3.0fm</string>
    <string name="fmt_time">%d:%02d</string>
    <string name="fmt_value_altitude">%1$s 　標高%2$s</string>
    <string name="fmt_value_photo">%1$s 　標高%2$s　撮影</string>
    <string name="fmt_value_accumulate">選択日：%s</string>
    <string name="fmt_photo_count">（写真%d枚）</string>
    <string name="fmt_run_count">滑走本数：%d</string>
    <string name="fmt_accumulate">&lt;font color=\"#%06x\"&gt;%,3.0fm&lt;/font&gt; /&lt;font color=\"#%06x\"&gt;%,3.0fm&lt;/font&gt;</string>
    <string name="fmt_ski_log">RUN：%d / 下降 %,3.0fm</string>
    <string name="fmt_title_chart">高度グラフ %s</string>
    <string name="fmt_title_chart2">シーズン %d</string>
    <string name="fmt_title_tag">検索：%s</string>
    <string name="fmt_menu_delete_logs">記録削除：%s</string>
    <!--<string name="fmt_photo_viewer">記録期間に撮影された写真が%d枚あります。\n表示しますか?</string>-->
    <string name="msg_date_selected">データを選択しました。\n\n選択日の高度グラフ表示、キーワード設定、データ削除などが行えます。</string>
    <string name="fmt_toast_daily_chart">%sの高度グラフを表示します</string>
    <string name="fmt_count_summaries">データ件数:%d</string>
    <string name="fmt_pager">%1$d/%2$d</string>

    <string name="msg_unselect">選択を解除しました。</string>

    <string name="menu_theme">アプリ テーマ変更</string>
    <string name="menu_export">ログをバックアップ</string>
    <string name="menu_import">バックアップからログを復帰</string>
    <string name="menu_delete_backup">バックアップを削除</string>
    <string name="menu_not_targeted">(対象日が選択されていません)</string>
    <string name="menu_targeted_fmt">対象日：%s</string>
    <string name="menu_delete_logs">記録削除</string>
    <string name="menu_list_tags">キーワード一覧/削除</string>
    <string name="menu_add_tags">キーワード追加</string>

    <!-- インポート/エクスポート関連 -->
    <string name="msg_select_import_log">復帰するバックアップを選択</string>
    <string name="msg_select_delete_backup">削除するバックアップを選択</string>
    <string name="msg_confirm_import_backup_fmt">以下のバックアップからログの復帰を行います。\n※ 現状のログは上書きされます\n\n%s</string>
    <string name="msg_confirm_delete_backup_fmt">以下のバックアップ データを削除します\n\n%s</string>
    <string name="msg_export_log_fmt">以下のフォルダにバックアップを作成します\n\n%s</string>
    <string name="msg_no_exported_logs">バックアップされたデータはありません</string>
    <string name="msg_exporting_logs">バックアップを作成しています&#8230;</string>
    <string name="msg_importing_logs">ログ情報を復帰しています&#8230;\n\n件数など条件によっては数分かかる場合があります</string>
    <string name="msg_export_logs_fmt">%1$d件のログ、%2$d件のキーワード情報をバックアップしました</string>
    <string name="msg_import_logs_fmt">%1$d件のログ、%2$d件のキーワード情報を復帰しました</string>
    <string name="msg_delete_backup">バックアップを削除しました</string>
    <string name="wrn_no_data_selected">バックアップが選択されませんでした。</string>
    <string name="wrn_export_logs_fmt">%d件のログ情報をバックアップしました\nキーワード情報のバックアップに失敗しました</string>
    <string name="wrn_import_logs_fmt">%d件のログ情報を復帰しました\nキーワード情報の復帰に失敗しました</string>
    <string name="wrn_import_svc_running">ログの復帰は、計測停止時に行ってください</string>
    <string name="err_export_logs">バックアップの作成に失敗しました</string>
    <string name="err_import_logs">バックアップからの復帰に失敗しました</string>
    <string name="err_delete_backup">バックアップの削除に失敗しました</string>

    <string-array name="app_themes">
        <item>テーマ：Light</item>
        <item>テーマ：Dark</item>
    </string-array>
    <string-array name="menu_add_tag">
        <item>直接入力する</item>
        <item>既存のキーワードから選択</item>
        <item>近隣の施設名から選択</item>
    </string-array>

    <string name="title_chart_altitude">高度グラフ</string>
    <string name="title_chart_desc">下降積算グラフ</string>
    <string name="label_accumulate">積算高度</string>
    <string name="label_altitude">高度</string>
    <string name="label_photo">写真撮影</string>
    <string name="label_count_lift">RUN</string>
    <string name="label_graph_asc">上昇積算</string>
    <string name="label_graph_desc">下降積算</string>
    <string name="label_status_stop">計測：STOP</string>
    <string name="label_status_start">計測：START</string>
    <string name="label_status_starting">計測：Starting&#8230;</string>

    <string name="btn_ok">OK</string>
    <string name="btn_cancel">キャンセル</string>
    <string name="btn_close">閉じる</string>
    <string name="btn_delete">削除</string>
    <string name="btn_restore">復帰</string>
    <string name="btn_finish_app">アプリ終了</string>

    <string name="fmt_title_list_tags">%s のキーワード</string>
    <string name="msg_delete_tags">キーワードを削除します</string>
    <string name="fmt_msg_deleted_tags">%sからキーワード「%s」を削除しました</string>


    <string name="default_altitude"> --- m</string>
    <string name="default_run_count">0</string>

    <string name="title_input_tag">キーワード設定</string>
    <string name="hint_tag">設定キーワードを入力してください</string>
    <string name="title_select_tag">キーワードで検索</string>
    <string name="menu_reset_tag">(絞りこみ解除)</string>
    <string name="msg_no_more_tags">選択可能なキーワードがありません</string>
    <string name="msg_getting_tags">施設情報を取得しています&#8230;</string>
    <string name="msg_no_place_tags">近隣の施設情報はみつかりませんでした</string>
    <string name="msg_fail_to_google_place_api">情報が取得できませんでした。通信環境の良い場所で再度お試しください</string>
    <string name="msg_gps_not_available">位置情報の設定が無効です</string>

    <string name="glue_join">,　</string>

    <string name="msg_no_data">No chart data available.</string>
    <string name="msg_close_application">アプリを終了します</string>

    <string name="title_delete_logs">記録削除</string>
    <string name="fmt_delete_daily_logs">%sの一日分の記録を削除しますか？\n\n削除したデータは復活できません。</string>
    <string name="fmt_delete_seasonal_logs">%sの全記録を削除しますか？\n\n削除したデータは復活できません。</string>

    <string name="title_missing_sensor">気圧センサーのない端末です</string>
    <string name="msg_missing_sensor">本アプリは気圧センサー機能を使用するため、残念ながらこの端末ではご利用いただけません。</string>
</resources>
