<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_change_theme"
        android:orderInCategory="100"
        android:title="@string/menu_theme"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_export_data"
        android:orderInCategory="101"
        android:title="@string/menu_export"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_import_data"
        android:orderInCategory="102"
        android:title="@string/menu_import"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_delete_data"
        android:orderInCategory="103"
        android:title="@string/menu_delete_backup"
        app:showAsAction="never"/>
</menu>
