<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingStart="28dp"
            android:paddingEnd="8dp"
            android:text="@string/label_status_stop"
            android:textSize="30sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:gravity="end"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/label_count_lift"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tv_count_lift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_run_count"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="34sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:tint="@color/colorIcon"
                    android:src="@drawable/ic_altitude"/>
                <TextView
                    android:id="@+id/tv_altitude"
                    android:minWidth="100dp"
                    android:textColor="@color/colorAltitude"
                    android:textSize="48sp"
                    style="@style/AltitudeText" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv_accumulate_asc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:tint="@color/colorIcon"
                    android:src="@drawable/ic_accumulate_asc"/>
                <TextView
                    android:id="@+id/tv_total_asc"
                    android:textColor="?android:colorForeground"
                    style="@style/AltitudeText" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:tint="@color/colorIcon"
                    android:src="@drawable/ic_accumulate_desc"/>
                <TextView
                    android:id="@+id/tv_total_desc"
                    android:textColor="@color/colorAccumulateDesc"
                    style="@style/AltitudeText"/>
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

    <include layout="@layout/inc_footer" />

</LinearLayout>
